Basic groundwork layed, [TODO] implement graph traversal

--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -1,8 +1,9 @@
 [Riot API]
-API key = 51007979-8ed4-4fea-9df0-25d9a171b163
+API key = <key>
 endpoint = https://na.api.pvp.net/api/lol/
 region = na
 version = v2.2
+max requests per min = 50
 
 [Parameters]
 include ranked solo = 1
@@ -11,3 +12,4 @@ include ranked 4s = 0
 
 [Seasons]
 SEASON2015
+
