--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -5,11 +5,9 @@ region = na
 version = v2.2
 max requests per min = 50
 
-[Parameters]
-include ranked solo = 1
-include ranked 5s = 1
-include ranked 4s = 0
+[rankedQueues]
+RANKED_SOLO_5x5
+RANKED_TEAM_5x5
 
-[Seasons]
+[seasons]
 SEASON2015
-
