--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -3,7 +3,8 @@ API key = <key>
 endpoint = https://na.api.pvp.net/api/lol/
 region = na
 version = v2.2
-max requests per min = 50
+max requests per 10 mins = 500
+max requests per 10 secs = 10
 
 [rankedQueues]
 RANKED_SOLO_5x5
