Updated some defaults and stat reporting

--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -3,8 +3,8 @@ API key = <key>
 endpoint = https://na.api.pvp.net/api/lol/
 region = na
 version = v2.2
-max requests per 10 mins = 500
 max requests per 10 secs = 10
+max requests per 10 mins = 500
 
 [rankedQueues]
 RANKED_SOLO_5x5
@@ -15,4 +15,11 @@ SEASON2015
 
 [Other Constraints]
 beginTime = 1441152000000
+
+[Seed summoner IDs]
+38978082
+19839634
+37073409
+25856104
+37497048
 
